# scriptycut

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml
examples/: custom_clip.py  videoproject1.py
src/scriptycut/: __meta__.py  cache.py  clip.py  clipflags.py  common.py  crossfade.py  ffinterface.py  fftools.py  fileclip.py  generate.py  image.py  jobthreads.py  log.py  overlay.py  pipe.py  rawframes.py  slice.py  streaminterface.py  transform.py
src/scriptycut/formats/: __init__.py  h264.py
testmedia/: README.md
